--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-polyfill": "^6.26.0",
     "classlist-polyfill": "^1.2.0",
     "egg": "^2.15.1",
+    "egg-mongoose": "^3.2.0",
     "egg-scripts": "^2.11.0",
     "element-ui": "^2.4.5",
     "js-cookie": "^2.2.0",
