--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "classlist-polyfill": "^1.2.0",
     "egg": "^2.15.1",
     "egg-mongoose": "^3.2.0",
+    "egg-redis": "^2.3.2",
     "egg-scripts": "^2.11.0",
     "egg-validate-plus": "^1.1.6",
     "element-ui": "^2.4.5",
