--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-polyfill": "^6.26.0",
     "classlist-polyfill": "^1.2.0",
     "egg": "^2.15.1",
+    "egg-cors": "^2.2.0",
     "egg-mongoose": "^3.2.0",
     "egg-redis": "^2.3.2",
     "egg-scripts": "^2.11.0",
@@ -39,6 +40,7 @@
     "mockjs": "^1.0.1-beta3",
     "nprogress": "^0.2.0",
     "script-loader": "^0.7.2",
+    "svg-captcha": "^1.4.0",
     "vue": "^2.5.16",
     "vue-axios": "^2.1.2",
     "vue-i18n": "^8.7.0",
