--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "egg-scripts": "^2.11.0",
     "egg-validate-plus": "^1.1.6",
     "element-ui": "^2.8.2",
+    "imap": "^0.8.19",
     "js-cookie": "^2.2.0",
+    "mailparser": "^2.7.1",
     "md5": "^2.2.1",
+    "nodemailer": "^6.2.1",
     "nprogress": "^0.2.0",
     "script-loader": "^0.7.2",
     "stream-wormhole": "^1.1.0",
