--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "egg-mongoose": "^3.2.0",
     "egg-redis": "^2.3.2",
     "egg-scripts": "^2.11.0",
+    "egg-swagger3": "^1.0.4",
     "egg-validate-plus": "^1.1.6",
     "element-ui": "^2.8.2",
     "imap": "^0.8.19",
