--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "vue-axios": "^2.1.2",
     "vue-i18n": "^8.7.0",
     "vue-router": "^3.0.1",
+    "vuedraggable": "^2.21.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
