--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "classlist-polyfill": "^1.2.0",
-    "egg": "^2.22.2",
+    "egg": "^2.15.1",
     "egg-cors": "^2.2.0",
     "egg-mongoose": "^3.2.0",
     "egg-redis": "^2.3.2",
     "egg-scripts": "^2.11.0",
-    "egg-swagger3": "^1.0.4",
+    "egg-swagger3": "^1.0.5",
     "egg-validate-plus": "^1.1.6",
+    "element-ui": "^2.9.1",
     "imap": "^0.8.19",
     "js-cookie": "^2.2.0",
     "mailparser": "^2.7.1",
