--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "autod": "^3.0.1",
     "autod-egg": "^1.1.0",
     "chai": "^4.1.2",
+    "compression-webpack-plugin": "^3.0.0",
     "egg-bin": "^4.11.0",
     "egg-ci": "^1.11.0",
     "egg-mock": "^3.21.0",
