--- a/package.json
+++ b/package.json
@@ -4,23 +4,12 @@
   "description": "",
   "private": true,
   "scripts": {
-    "start": "vue-cli-service build&&egg-scripts start --daemon --title=egg-server-example",
-    "stop": "egg-scripts stop --title=egg-server-example",
-    "dev": "egg-bin dev",
-    "debug": "egg-bin debug",
-    "test": "npm run lint -- --fix && npm run test-local",
-    "test-local": "egg-bin test",
-    "cov": "egg-bin cov",
-    "lint": "eslint .",
-    "ci": "npm run lint && npm run cov",
-    "autod": "autod",
-    "===": "====",
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint-vue": "vue-cli-service lint",
-    "analyz": "npm_config_report=true npm run build",
-    "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
+    "serve-start": "vue-cli-service build&&egg-scripts start --daemon --title=egg-server-example",
+    "serve-stop": "egg-scripts stop --title=egg-server-example",
+    "serve-dev": "egg-bin dev",
+    "serve-debug": "egg-bin debug",
+    "h5-serve": "vue-cli-service serve",
+    "h5-build": "vue-cli-service build",
     "create-page": "node create-page/create-page.js",
     "upload-test": "NODE_ENV=test node ./deploy",
     "upload-prod": "NODE_ENV=prod node ./deploy"
